--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@ h1, h2, h3, h4, h5, h6 {
   <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
     <a href="#home"><img src="https://i.postimg.cc/jjz1pSn0/Ogawa-logo.png"></a>
     <!-- Right-sided navbar links. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
+    <div class="w3-right w3-hide-small"> 
       <a href="#Service" class="w3-bar-item w3-button">Service</a>
       <a href="#Featured Item" class="w3-bar-item w3-button">Featured Item</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+      <a href="https://line.me/R/ti/p/@889ybdov?from=page&searchId=889ybdov" class="w3-bar-item w3-button" target="_blank">Contact</a>
     </div>
   </div>
 </div>
 
 <!--hero section-->
-<div class="hero-image">
+<div class="hero-image" id="home">
   <div class="hero-text">
-    <h1 style="font-size:50px"><b>Quality Care, Close to Home</b></h1><br>
-    <p>Your Neighborhood Pharmacy with Personalized Health Solutions</p><br>
-    <button>Contact us</button>
+    <h1 style="font-size:60px"><b>Quality Care,<br> Close to Home</b></h1><br>
+    <p style="font-size: 20px;">Your Neighborhood Pharmacy with Personalized Health Solutions</p><br>
+    <button type=“button” onclick="location.href='https://line.me/R/ti/p/@889ybdov?from=page&searchId=889ybdov'">Contact us</button>
   </div>
 </div>
 
@@ -107,8 +107,9 @@ h1, h2, h3, h4, h5, h6 {
   </div>
 
   <!-- Featured Item Section -->
+  <div style="height: 50px;"></div>
   <div class="container-fluid bg-3 text-center" id="Featured Item">    
-    <h3>Featured Item</h3><br>
+    <h1 style="color: #7C65CD;"><b>Featured Item</b></h1><br>
     <div class="row">
       <div class="col-sm-4">
         <img src="https://i.postimg.cc/tJq6k2Wn/Miraglen-img.jpg" alt="Image" width="350" height="300">
@@ -123,30 +124,38 @@ h1, h2, h3, h4, h5, h6 {
         <h4>Levercol</h4>
       </div>
     </div>
+    <div style="height: 100px;"></div>
   
   
 <!-- End page content -->
 </div>
 
 <!-- Footer -->
-<footer class="w3-center w3-light-grey w3-padding-32" href="C:\Users\yamada\Ogawa pharmacy css .css">
+<footer class="w3-center w3-light-grey w3-padding-32" href="Ogawa pharmacy css .css">
   <body>
     <div class="wrapper">
         <div class="one">
           <a href="#home"><img src="https://i.postimg.cc/jjz1pSn0/Ogawa-logo.png"></a>
         </div>
-        <div class="two">
-          <h5><b>Operation Hours:</b> 9:00am - 8:00 pm</h5>
-          <h5><b>Phone: </b> 0256-97-2047</h5>
-          <h5><b>Operation Hours: </b>9:00am - 8:00 pm</h5>
-          <h5><b>Adress: </b> 2-6-23 Jizodohoncho, Tubamesh, Niigata, Japan</h5> 
+        <div class="two" style="text-align: left;">
+          <h4><b>Operation Hours:</b> 9:00am - 8:00 pm</h4>
+          <h4><b>Phone: </b> 0256-97-2047</h4>
+          <h4><b>Operation Hours: </b>9:00am - 8:00 pm</h4>
+          <h4><b>Adress: </b> 2-6-23 Jizodohoncho, Tubamesh, Niigata, Japan</h4> 
+          </div>
         </div>
         <div class="three">
-          <h4>Let’s Connect on Line!</h4><img src="https://i.postimg.cc/4dhpLB8W/LINE-icon-2.png" alt="Image">
+          <div style="height: 30px;"></div>
+          <h4><b>Let’s Connect on Line!</b></h4>
         </div>
-      <div class="four">  
-        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-      </div>
+        <div class="four">
+          <a href="https://line.me/R/ti/p/@889ybdov?from=page&searchId=889ybdov" target="_blank">
+          <img src="https://i.postimg.cc/4dhpLB8W/LINE-icon-2.png" alt="Image">
+          </a>
+          <div style="height: 100px;"></div>
+          <p style="text-align: center;">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+        </div>
+        
   </body>
 </footer>
 
